# django-psl

./: Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
composeexample/: serializers.py  settings.py  urls.py  viewsets.py
composeexample/migrations/: 0001_initial.py
composeexample/models/: album.py  musician.py  track.py
composeexample/viewsets/: album.py  musician.py  track.py  user.py
data/db/: postmaster.pid
data/db/base/13757/: 1247  1249  1259  16384  16385  16390  16391  16393  16394  16398  16400  16402  16403  16407  16425  16426  16430  16432  16448  16455  16471  16530  16534  16535  16537  16538  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  (+15 more)
data/db/global/: 1260  pg_control  pg_internal.init
data/db/pg_stat_tmp/: db_0.stat  db_13757.stat  global.stat
scripts/: superuser.sh
